--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Raxcsu/RTA-Saildrone-Interface#readme",
   "dependencies": {
+    "chart.js": "^4.3.3",
     "express": "^4.18.2",
     "serialport": "^10.5.0",
     "socket.io": "^4.5.4"
